feat(jdk25): Game-scoped context via Scoped Values
Introduce GameContext (record) and Builder, and bind a
ScopedValue<GameContext> during Game.play()/playWithAction(...)
for thread-safe, structured context propagation. Expose accessors
Game.gameContext() and Game.isGameContextSet().

Update README to reference JEP 506 under JDK 25 to reflect
finalization of Scoped Values.

Files:
- api/src/main/java/org/xxdc/oss/example/GameContext.java
- api/src/main/java/org/xxdc/oss/example/Game.java
- README.md

Motivation:
- Avoid pitfalls of ThreadLocal while enabling simple, safe
  propagation of per-game metadata.
- Align with JEP 506 (finalized in JDK 25).

Refs: JEP-506